--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ h1{
   font-size: 2.5em;
   font-weight: 700;
   line-height: 1.1;
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 .App{
@@ -35,4 +35,16 @@ h1{
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+/* For small devices */
+@media screen and (max-width: 400px){
+  .App{
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+  }
+  h1{
+    font-size: 1.5rem;
+  }
 }
